--- a/src/style.css
+++ b/src/style.css
@@ -16,6 +16,7 @@
 
 .title{
     font-weight: bold;
+    margin-left: 30px;
 }
 
 
@@ -41,7 +42,7 @@ li {
 /* Navigation STyling */
 
 .all-notes{
-    margin: 25px 0 10px 0;
+    margin: 25px 0 10px 30px;
     font-weight: bold;
 }
 
@@ -52,7 +53,7 @@ li {
 }
 
 .main-nav li{
-    background-color: white;
+    background-color: transparent;
     padding: 5px;
     margin-top: 10px;
 }
